Started working on adding socials and contact

--- a/bootstrap intro/index.html
+++ b/bootstrap intro/index.html
@@ -154,7 +154,7 @@
 <!-- <div class="container">container is the section from MC Curtis to full distography at top -->
 	<div class="row">
 		<div class="col">
-			<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">MC Curtis</a>
+			<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ" style="text-align: center;">MC Curtis</a>
 		</div>
 		<div class="col">
 			<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a>
