--- a/index.html
+++ b/index.html
@@ -191,28 +191,28 @@
 		<div class="mx-auto heading-line">
 		</div>
 	</div>
-	<div class="row">
 
+
+	<div class="row">
 		<div class="col-lg-3 p-0">
-			<div class="filter"></div>
-			<img class="img-fluid py-3" src="img/phoneimage.jpg" alt="">
+			<img  src="img/phoneimage.jpg" id="smaller-image" >
 			</div>
 			<div class="col-lg-3 d-flex aligh-items-center justify-content-center">
 				<div class="text-center">
-					<h4 class="py-3">Contact and Socials</h4>
+					<h4 class="py-2">Contact and Socials</h4>
 					<!--Use target blank to ensure it opens in another tab-->
-					<a href="http://facebook.com" class="fab fa-facebook" target="_blank"></a>
-					<a href="https://twitter.com" class="fab fa-twitter"></a> 
+					<a href="http://facebook.com" class="fa fa-facebook m-2" style="color: lightblue" target="_blank"></a>
+					<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: lightblue"></a> 
+					<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: lightblue" target="_blank"></a>
+					<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: lightblue"></a> 
 				</div>
 			
 			</div>	
 
 	</div>
 
-
-
-
 </section>
+
 <!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
