--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 	<!--Home-->
 	<section class="home container">
 		<div class="row mt-5">
-			<div class="col-lg-6 mt-5 py-5 pl-5">
+			<div class="col-lg-6 mt-5 py-5 pl-5" style="width:50%">
 				<img class="img-fluid" alt="" src="img/MillCoverDark.png">
 			</div>
 			<!--my means margin on y-->
-			<div class="col-lg-6 my-auto">
+			<div class="col-lg-6 my-auto" style="width:50%">
 				<!-- so we have 12 rows to work with-->
 				<div class="row">
 					<div class="home-content offset -lg-1 col-lg-10">
@@ -194,23 +194,23 @@
 
 
 	<div class="row">
-		<div class="col-lg-3 p-0">
-			<img  src="img/phoneimage.jpg" id="smaller-image" >
+		<div class="col-lg-6 p-0" style="width:50%">
+			<div class="filter"></div>
+			<img class="img-fluid" src="img/phoneimage.jpg" id="smaller-image">
 			</div>
-			<div class="col-lg-3 d-flex aligh-items-center justify-content-center">
-				<div class="text-center">
-					<h4 class="py-2">Contact and Socials</h4>
-					<!--Use target blank to ensure it opens in another tab-->
-					<a href="http://facebook.com" class="fa fa-facebook m-2" style="color: lightblue" target="_blank"></a>
-					<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: lightblue"></a> 
-					<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: lightblue" target="_blank"></a>
-					<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: lightblue"></a> 
-				</div>
+		<div class="col-lg-6 d-flex aligh-items-center justify-content-center" style="width:50%">
+			<div class="text-center">
+				<h4 class="py-3">Contact and Socials</h4>
+				<!--Use target blank to ensure it opens in another tab-->
+				<a href="http://facebook.com" class="fa fa-facebook m-2" style="color: lightblue" target="_blank"></a>
+				<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: lightblue"></a> 
+				<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: lightblue" target="_blank"></a>
+				<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: lightblue"></a> 
+			</div>
 			
-			</div>	
+		</div>	
 
 	</div>
-
 </section>
 
 <!-- Optional JavaScript -->
