--- a/index.html
+++ b/index.html
@@ -184,8 +184,24 @@
 </section>
 
 
-<section class="contact and socials container-fluid bg-light">
+<section class="contact and socials container-fluid bg-light" >
 
+		<div class="container d-flex aligh-items-center justify-content-center pt-3" style="width:50%">
+			<div class="text-center">
+				<h4 class="py-2" style="border-radius: 30px;">Contact and Socials</h4>
+
+				<!--Use target blank to ensure it opens in another tab-->
+			<div class="socialLinks pb-4">
+				<a href="http://facebook.com" class="fa fa-facebook-square m-2" style="color: blue" target="_blank"></a>
+				<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue"></a> 
+				<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank"></a>
+				<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue"></a> 
+			</div>
+			</div>
+			
+		</div>	
+	</section>
+<!--
 	<div class="container text-center w-50">
 		<h2> Contact and Socials </h2>
 		<div class="mx-auto heading-line">
@@ -201,7 +217,10 @@
 		<div class="col-lg-6 d-flex aligh-items-center justify-content-center" style="width:50%">
 			<div class="text-center">
 				<h4 class="py-3">Contact and Socials</h4>
+			-->
 				<!--Use target blank to ensure it opens in another tab-->
+			
+<!--
 				<a href="http://facebook.com" class="fa fa-facebook m-2" style="color: lightblue" target="_blank"></a>
 				<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: lightblue"></a> 
 				<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: lightblue" target="_blank"></a>
@@ -211,7 +230,9 @@
 		</div>	
 
 	</div>
-</section>
+
+-->
+
 
 <!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
