--- a/FreezeUp.html
+++ b/FreezeUp.html
@@ -93,6 +93,25 @@
 			</div>
 		</div>
 	</section>
+
+
+	<section class="contact and socials container-fluid bg-light" >
+
+		<div class="container d-flex aligh-items-center justify-content-center pt-3" style="width:50%">
+			<div class="text-center">
+				<h4 class="py-2" style="border-radius: 30px;">Contact and Socials</h4>
+
+				<!--Use target blank to ensure it opens in another tab-->
+			<div class="socialLinks pb-4">
+				<a href="http://facebook.com" class="fa fa-facebook-square m-2" style="color: blue" target="_blank"></a>
+				<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue"></a> 
+				<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank"></a>
+				<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue"></a> 
+			</div>
+			</div>
+			
+		</div>	
+	</section>
 	
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
