--- a/Socials.html
+++ b/Socials.html
@@ -64,6 +64,33 @@
 		
 	</nav>
 
+	<section class="home container" >
+
+	<div class="Contactcontainer">
+		<h1 class="darkercolor"><b>Contact and Socials</b> </h1>
+		</div>
+	</div>
+
+		<div class="container text-center" style="width:90%">
+			<div class="filter"></div>
+			<img class="img-fluid" src="img/phoneimage.jpg" id="smaller-image">
+			</div>
+
+			<div class="container d-flex aligh-items-center justify-content-center pt-3" style="width:50%">
+				<div class="text-center">
+					<h4 class="py-2" style="border-radius: 30px;">Contact and Socials</h4>
+	
+					<!--Use target blank to ensure it opens in another tab-->
+				<div class="socialLinks pb-4">
+					<a href="http://facebook.com" class="fa fa-facebook-square m-2" style="color: blue" target="_blank"></a>
+					<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue"></a> 
+					<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank"></a>
+					<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue"></a> 
+				</div>
+				</div>
+				
+			</div>	
+</section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
