--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	and width of text 50% of the screen-->
 	<div class="container text-center w-60">
 		<h2 class="py-3">Check Out MC Curtis' New EP</h2>
-		<div class="mx-auto heading-line"></div>
+
 		<p class="py-3">MC Curtis started his career being featured on Toront After Dark 2 but he released his first
 			solo mixtape/ep on June 1st 2020 with stand out hits <a href="https://ampl.ink/G6ReO"><u>Freestyle Henny</u></a> and <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>.
 		</p>
@@ -186,9 +186,15 @@
 
 <section class="contact and socials container-fluid bg-light" >
 
-		<div class="container d-flex aligh-items-center justify-content-center pt-3" style="width:50%">
+
+
+	<div class="row">
+
+
+
+		<div class="col-lg-6 d-flex aligh-items-center justify-content-center pt-3" style="width:50%">
 			<div class="text-center">
-				<h4 class="py-2" style="border-radius: 30px;">Contact and Socials</h4>
+				<h4 class="py-2" style="border-radius: 30px;">Socials</h4>
 
 				<!--Use target blank to ensure it opens in another tab-->
 			<div class="socialLinks pb-4">
@@ -201,6 +207,16 @@
 			
 		</div>	
 	</section>
+
+<section class="contactus">
+	<div class="container">
+		<div class="container text-center w-60">
+			<h2 class="py-2">Contact</h2>
+		</div>
+
+</section>
+
+
 <!--
 	<div class="container text-center w-50">
 		<h2> Contact and Socials </h2>
