Formating Which side contact should be on vs Socials

--- a/index.html
+++ b/index.html
@@ -186,10 +186,28 @@
 
 <section class="contact and socials container-fluid bg-light" >
 
-
-
+	<div class="container text-center w-50">
+		<h2 class="py-2"> Contact and Socials </h2>
+	</div>
 	<div class="row">
 
+		<div class="col-lg-6">
+			<div class="form-group">
+				<label for="email">Email</label>
+				<input id="email" type="email" class="form-control" aria-describedby="emailcode" placeholder="Your Email">
+			</div>
+		
+			<div class="form-group">
+				<label for="name">Name</label>
+				<input id="name" type="text" class="form-control" placeholder="Your Name">
+			</div>
+			<div class="form-group">
+				<label for="Message">Message</label>
+				<textarea id="Message"  class="form-control" placeholder="Your Message"></textarea>
+			</div>
+
+
+		</div>
 
 
 		<div class="col-lg-6 d-flex aligh-items-center justify-content-center pt-3" style="width:50%">
@@ -197,7 +215,7 @@
 				<h4 class="py-2" style="border-radius: 30px;">Socials</h4>
 
 				<!--Use target blank to ensure it opens in another tab-->
-			<div class="socialLinks pb-4">
+			<div class="socialLinks py-3">
 				<a href="http://facebook.com" class="fa fa-facebook-square m-2" style="color: blue" target="_blank"></a>
 				<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue"></a> 
 				<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank"></a>
@@ -206,13 +224,7 @@
 			</div>
 			
 		</div>	
-	</section>
-
-<section class="contactus">
-	<div class="container">
-		<div class="container text-center w-60">
-			<h2 class="py-2">Contact</h2>
-		</div>
+	</div>
 
 </section>
 
