--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
 							href="theintro.html">The Intro EP</a></button>
 					</div>
-
+					<div class="socialLinks pt-1">
+						<a href="http://facebook.com" class="fa fa-youtube-play m-2" style="color: blue" target="_blank"></a>
+						<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue"></a> 
+						<a href="http://soundcloud.com" class="fa fa-soundcloud m-2" style="color: blue" target="_blank"></a>
+		
+					</div>
 				</div>
 
 			</div>
@@ -98,7 +103,7 @@
 
 
 
-<section class="go-stream py-5" style="background-color: antiquewhite;">
+<section class="go-stream py-3" style="background-color: antiquewhite;">
 	<!--Making the size of this class. text in center
 	and width of text 50% of the screen-->
 	<div class="container text-center w-100">
@@ -129,7 +134,7 @@
 
 </section
 <!--Check Out MC Curtis' New EP-->
-<section class="go-stream py-5" style="background-color: aquamarine;">
+<section class="go-stream py-3" style="background-color: aquamarine;">
 	<!--Making the size of this class. text in center
 	and width of text 50% of the screen-->
 	<div class="container text-center w-60">
@@ -195,6 +200,7 @@
 			<div class="form-group">
 				<label for="email">Email</label>
 				<input id="email" type="email" class="form-control" aria-describedby="emailcode" placeholder="Your Email">
+				<small id="emailcode" class="form-text text-muted">or email undergroundcomeupinquiry@gmail.com</small>
 			</div>
 		
 			<div class="form-group">
@@ -220,6 +226,11 @@
 				<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue"></a> 
 				<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank"></a>
 				<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue"></a> 
+
+			</div>
+
+			<div class="container text-center" style="width:60%">
+			<img class="img-fluid" src="img/phoneimage.jpg" id="smaller-image">
 			</div>
 			</div>
 			
