Changed Contact at bottom of pages to emailing list. Added Emailing List and Socials at bottom of most pages. Started on/created Contact page and added to link to the nav bar for all other pages

--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Socials</title>
+    <title>Contact</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -29,12 +29,11 @@
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
-					</li>
-					<li class="nav-item">
 						<a class="nav-link" href="UCU.html">UCU</a>
 					</li>
-
+					<li class="nav-item">
+						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
+					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="Socials.html">Socials</a>
 					</li>
@@ -42,14 +41,14 @@
 						<a class="nav-link" href="Collabs.html">Collabs</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link btn btn-outline-secondary" href="#">Contact</a>
+						<a class="nav-link btn btn-outline-secondary" href="Contact.html">Contact</a>
 					</li>
 
 					<li class="nav-item">
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Full Distography Links</a>
 						<div class="dropdown-menu" aria-labelledby="dropdownId">
-                            <a class="dropdown-item" href="FWTV.html">Fuck With the Vision</a>
+							<a class="dropdown-item" href="FWTV.html">Fuck With the Vision</a>
 							<a class="dropdown-item" href="MakeAMill.html">Make a Mill</a>
 							<a class="dropdown-item" href="LiquorFlowin.html">Keep the Liquor Flowin'</a>
 							<a class="dropdown-item" href="LoudThatISmoke.html">Loud That I Smoke</a>
@@ -59,69 +58,10 @@
 					</li>
 				</ul>
 			</div>
+
 		</div>
 		
-    </nav>
-    <section class="Page py-3"> <!--py means padding y axis-->
-        <h2 class="titlestart"><Strong>Sick When U Do That</Strong></h2>
-        <img src="img/Sick.png" class="center">
-        <div class="wrapper">
-            <button class="btn btn-lg btn-primary" style="text-align: center"><a class="indexButton"
-			href="https://ampl.ink/emXGL">Stream Here</a></button>
-		</div>
-		
-
-	</section>
-
-	<section class="contact and socials container-fluid bg-light" >
-
-		<div class="container text-center w-50">
-			<h2 class="py-2"> Email List and Socials </h2>
-		</div>
-		<div class="row">
-	
-			<div class="col-lg-6">
-				<div class="form-group">
-					<label for="email">Email</label>
-					<input id="email" type="email" class="form-control" aria-describedby="emailcode" placeholder="Your Email">
-					<small id="emailcode" class="form-text text-muted">or email undergroundcomeupinquiry@gmail.com</small>
-				</div>
-			
-				<div class="form-group">
-					<label for="name">Name</label>
-					<input id="name" type="text" class="form-control" placeholder="Your Name">
-				</div>
-				<div class="form-group">
-					<label for="Message">Message</label>
-					<textarea id="Message"  class="form-control" placeholder="Your Message"></textarea>
-				</div>
-	
-	
-			</div>
-	
-	
-			<div class="col-lg-6 d-flex aligh-items-center justify-content-center pt-3" style="width:50%">
-				<div class="text-center">
-					<h4 class="py-2" style="border-radius: 30px;">Socials</h4>
-	
-					<!--Use target blank to ensure it opens in another tab-->
-				<div class="socialLinks py-3">
-					<a href="http://facebook.com" class="fa fa-facebook-square m-2" style="color: blue" target="_blank" ></a>
-					<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue" target="_blank"></a> 
-					<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank" ></a>
-					<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue" target="_blank"></a> 
-	
-				</div>
-	
-				<div class="container text-center" style="width:60%">
-				<img class="img-fluid" src="img/phoneimage.jpg" id="smaller-image">
-				</div>
-				</div>
-				
-			</div>	
-		</div>
-	
-	</section>
+	</nav>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
