--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<a class="nav-link" href="Collabs.html">Collabs</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link btn btn-outline-secondary" href="#">Contact</a>
+						<a class="nav-link btn btn-outline-secondary" href="Contact.html">Contact</a>
 					</li>
 
 					<li class="nav-item">
@@ -90,9 +90,9 @@
 							href="theintro.html">The Intro EP</a></button>
 					</div>
 					<div class="socialLinks pt-1">
-						<a href="http://facebook.com" class="fa fa-youtube-play m-2" style="color: blue" target="_blank"></a>
-						<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue"></a> 
-						<a href="http://soundcloud.com" class="fa fa-soundcloud m-2" style="color: blue" target="_blank"></a>
+						<a href="https://www.youtube.com/playlist?list=PLwJArGHzFTq-14i5zZ18nFQdTOu3KMf7H" class="fa fa-youtube-play m-2" style="color: blue" target="_blank"></a>
+						<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=QpeQzztITziq3N0TRfUaMA" class="fa fa-spotify m-2" target="_blank" style="color: blue"></a> 
+						<a href="https://soundcloud.com/user-593936036/sets/the-intro-1" class="fa fa-soundcloud m-2" style="color: blue" target="_blank"></a>
 		
 					</div>
 				</div>
@@ -192,7 +192,7 @@
 <section class="contact and socials container-fluid bg-light" >
 
 	<div class="container text-center w-50">
-		<h2 class="py-2"> Contact and Socials </h2>
+		<h2 class="py-2"> Email List and Socials </h2>
 	</div>
 	<div class="row">
 
@@ -222,10 +222,10 @@
 
 				<!--Use target blank to ensure it opens in another tab-->
 			<div class="socialLinks py-3">
-				<a href="http://facebook.com" class="fa fa-facebook-square m-2" style="color: blue" target="_blank"></a>
-				<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue"></a> 
-				<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank"></a>
-				<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue"></a> 
+				<a href="http://facebook.com" class="fa fa-facebook-square m-2" style="color: blue" target="_blank" ></a>
+				<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue" target="_blank"></a> 
+				<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank" ></a>
+				<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue" target="_blank"></a> 
 
 			</div>
 
