--- a/LoudThatISmoke.html
+++ b/LoudThatISmoke.html
@@ -42,7 +42,7 @@
 						<a class="nav-link" href="Collabs.html">Collabs</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link btn btn-outline-secondary" href="#">Contact</a>
+						<a class="nav-link btn btn-outline-secondary" href="Contact.html">Contact</a>
 					</li>
 
 					<li class="nav-item">
