--- a/Socials.html
+++ b/Socials.html
@@ -42,7 +42,7 @@
 						<a class="nav-link" href="Collabs.html">Collabs</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link btn btn-outline-secondary" href="#">Contact</a>
+						<a class="nav-link btn btn-outline-secondary" href="Contact.html">Contact</a>
 					</li>
 
 					<li class="nav-item">
@@ -67,7 +67,7 @@
 	<section class="home container" >
 
 	<div class="Contactcontainer">
-		<h1 class="darkercolor"><b>Contact and Socials</b> </h1>
+		<h1 class="darkercolor"><b> Email List and Socials</b> </h1>
 		</div>
 	</div>
 
@@ -85,7 +85,7 @@
 					<a href="http://facebook.com" class="fa fa-facebook-square m-2" style="color: blue" target="_blank"></a>
 					<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue"></a> 
 					<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank"></a>
-					<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue"></a> 
+					<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue" target="_blank"></a> 
 				</div>
 				</div>
 				
