Added Email List and Socials to all pages. Removed red box around some titles from main.css, currently working on contact

--- a/Socials.html
+++ b/Socials.html
@@ -67,7 +67,7 @@
 	<section class="home container" >
 
 	<div class="Contactcontainer">
-		<h1 class="darkercolor"><b> Email List and Socials</b> </h1>
+		<h1 class="darkercolor"><b> Socials</b> </h1>
 		</div>
 	</div>
 
