--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 	</nav>
 
 	<!--Home-->
-	<section class="home container">
-		<div class="row mt-5">
-			<div class="col-lg-6 mt-5 py-5 pl-5" style="width:50%">
+	<section class="home container mt-0">
+		<div class="row">
+			<div class="col-lg-6 mt-2 py-5 pl-5" style="width:50%">
 				<img class="img-fluid" alt="" src="img/MillCoverDark.png">
 			</div>
 			<!--my means margin on y-->
@@ -132,9 +132,9 @@
 	</div>
 
 
-</section
+</section>
 <!--Check Out MC Curtis' New EP-->
-<section class="go-stream py-3" style="background-color: aquamarine;">
+<section class="go-stream pt-2 pb-3" style="background-color: aquamarine;">
 	<!--Making the size of this class. text in center
 	and width of text 50% of the screen-->
 	<div class="container text-center w-60">
