--- a/LiquorFlowin.html
+++ b/LiquorFlowin.html
@@ -62,13 +62,65 @@
 		</div>
 		
     </nav>
-    <section class="Page py-5"> <!--py means padding y axis-->
+    <section class="Page pt-5 pb-3"> <!--py means padding y axis-->
         <h2 class="titlestart"><Strong>Keep The Liquor Flowin'</Strong></h2>
         <img src="img/LiquorFlowin.jpg" class="center">
         <div class="wrapper">
             <button class="btn btn-lg btn-primary" style="text-align: center"><a class="indexButton"
 			href="https://ampl.ink/emXGL">Stream Here</a></button>
-        </div>
+		</div>
+		
+	</section>
+
+	<section class="contact and socials container-fluid bg-light" >
+
+		<div class="container text-center w-50">
+			<h2 class="py-2"> Email List and Socials </h2>
+		</div>
+		<div class="row">
+	
+			<div class="col-lg-6">
+				<div class="form-group">
+					<label for="email">Email</label>
+					<input id="email" type="email" class="form-control" aria-describedby="emailcode" placeholder="Your Email">
+					<small id="emailcode" class="form-text text-muted">or email undergroundcomeupinquiry@gmail.com</small>
+				</div>
+			
+				<div class="form-group">
+					<label for="name">Name</label>
+					<input id="name" type="text" class="form-control" placeholder="Your Name">
+				</div>
+				<div class="form-group">
+					<label for="Message">Message</label>
+					<textarea id="Message"  class="form-control" placeholder="Your Message"></textarea>
+				</div>
+	
+	
+			</div>
+	
+	
+			<div class="col-lg-6 d-flex aligh-items-center justify-content-center pt-3" style="width:50%">
+				<div class="text-center">
+					<h4 class="py-2" style="border-radius: 30px;">Socials</h4>
+	
+					<!--Use target blank to ensure it opens in another tab-->
+				<div class="socialLinks py-3">
+					<a href="http://facebook.com" class="fa fa-facebook-square m-2" style="color: blue" target="_blank" ></a>
+					<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue" target="_blank"></a> 
+					<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank" ></a>
+					<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue" target="_blank"></a> 
+	
+				</div>
+	
+				<div class="container text-center" style="width:60%">
+				<img class="img-fluid" src="img/phoneimage.jpg" id="smaller-image">
+				</div>
+				</div>
+				
+			</div>	
+		</div>
+	
+	</section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
