Added in the proper link (one  amplify link that has links to song on all streaming plateforms) for the Stream Here button for all of the songs in my distography 9(previously I was just using a song linto the intro as a place holder

--- a/FWTV.html
+++ b/FWTV.html
@@ -64,7 +64,7 @@
         <img src="img/TAD2.jpg" class="center">
         <div class="wrapper pb-4">
             <button class="btn btn-lg btn-primary" style="text-align: center"><a class="indexButton"
-			href="https://ampl.ink/emXGL">Stream Here</a></button>
+			href="https://ampl.ink/G64al">Stream Here</a></button>
 		</div>
 		
 
