--- a/FreezeUp.html
+++ b/FreezeUp.html
@@ -75,8 +75,8 @@
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
                             Toronto area with a passion to create. <a href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2"><u>"Freeze Up"</u></a> is the first single following up MC Curtis' first ever mixtape
                             <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a>. Contrary to his mixtape release, <a href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2"><u>"Freeze Up"</u></a>
-                            was recorded at an infamous studio in Toronto called "Majur Musik Studios" which have had many notable toronto artists record there
-                            including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help from engineer pop kris (who has credits
+                            was recorded at the established and well known studio in Toronto called "Majur Musik Studios" which have had many notable Toronto artists record there
+                            including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help from engineer Pop Kris (who has credits
                             with famous artists such as Cardi B and Popcaan). This song has a more relaxed laid-back vibe and following some success from "The Intro", MC Curtis felt like this
                             is a great song to follow up with to continue to show his diversity in his art and show people what he has to offer!
 						</p>
