--- a/Sick.html
+++ b/Sick.html
@@ -64,7 +64,7 @@
         <img src="img/Sick.png" class="center">
         <div class="wrapper">
             <button class="btn btn-lg btn-primary" style="text-align: center"><a class="indexButton"
-			href="https://ampl.ink/emXGL">Stream Here</a></button>
+			href="https://soundcloud.com/user-593936036/mc-curtis-sick-when-u-do-that-turk-x-roney-remix">Stream Here</a></button>
 		</div>
 		
 
