--- a/MakeAMill.html
+++ b/MakeAMill.html
@@ -64,7 +64,7 @@
         <img src="img/MakeAMill.jpg" class="center">
         <div class="wrapper">
             <button class="btn btn-lg btn-primary" style="text-align: center"><a class="indexButton"
-			href="https://ampl.ink/emXGL">Stream Here</a></button>
+			href="https://ampl.ink/8omv5">Stream Here</a></button>
 		</div>
 		
 	</section>
