--- a/LoudThatISmoke.html
+++ b/LoudThatISmoke.html
@@ -102,10 +102,10 @@
 	
 					<!--Use target blank to ensure it opens in another tab-->
 				<div class="socialLinks py-3">
-					<a href="http://facebook.com" class="fa fa-facebook-square m-2" style="color: blue" target="_blank" ></a>
-					<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue" target="_blank"></a> 
-					<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank" ></a>
-					<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue" target="_blank"></a> 
+					<a href="https://www.facebook.com/RealMCCurtis/" class="fa fa-facebook-square m-2" style="color: blue" target="_blank" ></a>
+					<a href="https://twitter.com/RealMCCurtis" class="fa fa-twitter m-2" style="color: blue" target="_blank"></a> 
+					<a href="https://www.instagram.com/realmccurtis/" class="fa fa-instagram m-2" style="color: blue" target="_blank" ></a>
+					<a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=Kjl8WfneTXuE2ej3W0-D0w" class="fa fa-spotify m-2" style="color: blue" target="_blank"></a> 
 	
 				</div>
 	
