--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
 			 artists from Toronto to showcase there talent called "Toronto After Dark" (MC Curtis did 
 			 not actually rap on this project). In July 2019 to follow up, he released "Toronto After
 			  Dark 2" which had the first appearance of MC Curtis with his first ever release "Fuck
-			   With the Vision" which has received over 20 thousands streams on spotify which significantly
+			   With the Vision" which has received over 20 thousands streams on Spotify which significantly
 			    out performed the rest of the tracks on Toronto After Dark 2. 
 
 			MC Curtis is currently in university for software engineering so his schedule is pretty chaotic but he still
 			 finds time to dedicate to his craft. MC Curtis has dropped a couple of songs all leading up to his
 			  first EP release titled <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a> which he released June 1st which has already garnered thousands
 			  of streams! This tape included standout tracks such as <a href="https://ampl.ink/G6ReO"><u>Freestyle Henny</u></a> Which already has surpassed 10k streams
-			  on soundcloud alone and <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>
+			  on SoundCloud alone and <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>
 			  which is currently sitting at over 7k streams on Spotify. Make sure to stay up to date and follow me on my journey and check out my new single 
 			  <a href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2"><u>Freeze Up</u></a>, you won't be disappointed!
 			  
@@ -219,10 +219,10 @@
 
 				<!--Use target blank to ensure it opens in another tab-->
 			<div class="socialLinks py-3">
-				<a href="http://facebook.com" class="fa fa-facebook-square m-2" style="color: blue" target="_blank" ></a>
-				<a href="https://twitter.com" class="fa fa-twitter m-2" style="color: blue" target="_blank"></a> 
-				<a href="http://instagram.com" class="fa fa-instagram m-2" style="color: blue" target="_blank" ></a>
-				<a href="https://spotify.com" class="fa fa-spotify m-2" style="color: blue" target="_blank"></a> 
+				<a href="https://www.facebook.com/RealMCCurtis/" class="fa fa-facebook-square m-2" style="color: blue" target="_blank" ></a>
+				<a href="https://twitter.com/RealMCCurtis" class="fa fa-twitter m-2" style="color: blue" target="_blank"></a> 
+				<a href="https://www.instagram.com/realmccurtis/" class="fa fa-instagram m-2" style="color: blue" target="_blank" ></a>
+				<a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=Kjl8WfneTXuE2ej3W0-D0w" class="fa fa-spotify m-2" style="color: blue" target="_blank"></a> 
 
 			</div>
 
