--- a/FreestyleHenny.html
+++ b/FreestyleHenny.html
@@ -59,9 +59,21 @@
 		</div>
 		
     </nav>
-    <section class="Page pt-5 pb-3"> <!--py means padding y axis-->
-        <h2 class="titlestart"><Strong>Freestyle Henny</Strong></h2>
-        <img src="img/FreestyleHenny.jpg" class="center">
+    <section class="darkmatchintro pt-5 pb-4"> <!--py means padding y axis-->
+		<h2 class="titlestart" style="color:aliceblue"><Strong>Freestyle Henny</Strong></h2>
+	
+	<div class="row pb-1">	
+	<div class="col-emptybg">
+		<img src="img/FreestyleHenny.jpg" style="width:100%" class="center">
+	</div>
+	
+	<div class="col-emptybg">
+	<video width=56.5% height=auto controls>
+		<source src="img/Freestyle_Henny_Triller.mp4" type="video/mp4">
+
+		</video>
+	</div>
+	</div>
         <div class="wrapper">
             <button class="btn btn-lg btn-primary" style="text-align: center"><a class="indexButton"
 			href="https://ampl.ink/G6ReO">Stream Here</a></button>
@@ -118,6 +130,9 @@
 		</div>
 	
 	</section>
+
+
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
