Adding in proper Freeze Up link

--- a/FreezeUp.html
+++ b/FreezeUp.html
@@ -82,7 +82,7 @@
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2">Click Here To Stream!</a></button>
+							href="https://ampl.ink/1jJVN">Click Here To Stream!</a></button>
 					</div>
 
 				</div>
