Adding in Freeze Up Link since it just released

--- a/FreezeUp.html
+++ b/FreezeUp.html
@@ -73,8 +73,8 @@
 						<h1 class="pb-3" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
 						<h2 class="pb-3"> Freeze Up</h2>
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
-                            Toronto area with a passion to create. <a href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2"><u>"Freeze Up"</u></a> is the first single following up MC Curtis' first ever mixtape
-                            <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a>. Contrary to his mixtape release, <a href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2"><u>"Freeze Up"</u></a>
+                            Toronto area with a passion to create. <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a> is the first single following up MC Curtis' first ever mixtape
+                            <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a>. Contrary to his mixtape release, <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a>
                             was recorded at the established and well known studio in Toronto called "Majur Musik Studios" which have had many notable Toronto artists record there
                             including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help from engineer Pop Kris (who has credits
                             with famous artists such as Cardi B and Popcaan). This song has a more relaxed laid-back vibe and following some success from "The Intro", MC Curtis felt like this
@@ -82,7 +82,7 @@
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="https://ampl.ink/1jJVN">Click Here To Stream!</a></button>
+							href="https://ampl.ink/G6vwv">Click Here To Stream!</a></button>
 					</div>
 
 				</div>
