--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
 			  of streams! This tape included standout tracks such as <a href="https://ampl.ink/G6ReO"><u>Freestyle Henny</u></a> Which already has surpassed 10k streams
 			  on SoundCloud alone and <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>
 			  which is currently sitting at over 7k streams on Spotify. Make sure to stay up to date and follow me on my journey and check out my new single 
-			  <a href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2"><u>Freeze Up</u></a>, you won't be disappointed!
+			  <a href="https://ampl.ink/G6vwv"><u>Freeze Up</u></a>, you won't be disappointed!
 			  
 			</p>
 			<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-				href="https://distrokid.com/hyperfollow/mccurtis/freeze-up-2">Stream Freeze Up</a></button>
+				href="https://ampl.ink/G6vwv">Stream Freeze Up</a></button>
 	</div>
 
 
