--- a/Benjis.html
+++ b/Benjis.html
@@ -66,7 +66,7 @@
 	<body class="main">
 		<div class="row mt-5">
 			<div class="col-lg-6 mt-5 py-5 pl-5">
-				<img class="img-fluid" alt="" src="img/freezeup.jpg">
+				<img class="img-fluid" alt="" src="img/Benjis.png">
 			</div>
 			<!--my means margin on y-->
 			<div class="col-lg-6 my-auto">
