--- a/Collabs.html
+++ b/Collabs.html
@@ -28,6 +28,9 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
 					</li>
+										<li class="nav-item">
+						<a class="nav-link" href="Benjis.html">Benjis</a>
+                    </li>
 					<li class="nav-item">
 						<a class="nav-link" href="UCU.html">UCU</a>
 					</li>
