--- a/Benjis.html
+++ b/Benjis.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Freeze Up</title>
+    <title>Benjis</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -74,18 +74,19 @@
 				<div class="row">
 					<div class="home-content offset -lg-1 col-lg-10">
 						<h1 class="pb-3" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
-						<h2 class="pb-3"> Freeze Up</h2>
+						<h2 class="pb-3"> Benjis</h2>
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
-                            Toronto area with a passion to create. <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a> is the first single following up MC Curtis' first ever mixtape
-                            <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a>. Contrary to his mixtape release, <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a>
+                            Toronto area with a passion to create. <a href="https://distrokid.com/hyperfollow/mccurtis/benjis"><u>"Benjis"</u></a> is MC Curtis' follow up from him successful
+                            previous release <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a> which was placed on a number of playlists including "Bangers Only", "Toronto Heatseekers", "Upcoming Hip Hop"
+                            and "Canada Rap".<a href="https://distrokid.com/hyperfollow/mccurtis/benjis"><u>"Benjis"</u></a>
                             was recorded at the established and well known studio in Toronto called "Majur Musik Studios" which have had many notable Toronto artists record there
-                            including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help from engineer Pop Kris (who has credits
-                            with famous artists such as Cardi B and Popcaan). This song has a more relaxed laid-back vibe and following some success from "The Intro", MC Curtis felt like this
-                            is a great song to follow up with to continue to show his diversity in his art and show people what he has to offer!
+                            including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help
+                             from engineer Pop Kris (who has credits with famous artists such as Cardi B and Popcaan). This song has a more high energy flexing energy and MC 
+                             Curtis felt like this is a great song to follow up with to continue to show his diversity in his art and show people what he has to offer!
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="https://ampl.ink/G6vwv">Click Here To Stream!</a></button>
+							href="https://distrokid.com/hyperfollow/mccurtis/benjis">Click Here To Stream!</a></button>
 					</div>
 
 				</div>
