Changed links in benjis, starting to add fa social links to the albums for both UCU albums

--- a/Benjis.html
+++ b/Benjis.html
@@ -76,9 +76,9 @@
 						<h1 class="pb-3" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
 						<h2 class="pb-3"> Benjis</h2>
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
-                            Toronto area with a passion to create. <a href="https://distrokid.com/hyperfollow/mccurtis/benjis"><u>"Benjis"</u></a> is MC Curtis' follow up from him successful
+                            Toronto area with a passion to create. <a href="https://ampl.ink/wP6Lo"><u>"Benjis"</u></a> is MC Curtis' follow up from him successful
                             previous release <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a> which was placed on a number of playlists including "Bangers Only", "Toronto Heatseekers", "Upcoming Hip Hop"
-                            and "Canada Rap".<a href="https://distrokid.com/hyperfollow/mccurtis/benjis"><u>"Benjis"</u></a>
+                            and "Canada Rap".<a href="https://ampl.ink/wP6Lo"><u>"Benjis"</u></a>
                             was recorded at the established and well known studio in Toronto called "Majur Musik Studios" which have had many notable Toronto artists record there
                             including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help
                              from engineer Pop Kris (who has credits with famous artists such as Cardi B and Popcaan). This song has a more high energy flexing energy and MC 
@@ -86,7 +86,7 @@
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="https://distrokid.com/hyperfollow/mccurtis/benjis">Click Here To Stream!</a></button>
+							href="https://ampl.ink/wP6Lo">Click Here To Stream!</a></button>
 					</div>
 
 				</div>
