--- a/UCU.html
+++ b/UCU.html
@@ -63,9 +63,17 @@
 		</div>
 		
 	</nav>
-    <section class="Page py-5"> <!--py means padding y axis-->
-    <h2 class="titlestart"><Strong>Toronto After Dark</Strong></h2>
-    <img src="img/TOD1.jpg" class="center">
+    <section class="Page pt-5"> <!--py means padding y axis-->
+    <h2 class="titlestart mb-0"><Strong>Toronto After Dark</Strong></h2>
+
+    <div class="socialLinks text-center">
+    <a href="https://www.facebook.com/RealMCCurtis/" class="fa fa-facebook-square m-2" style="color: black" target="_blank" ></a>
+    <a href="https://twitter.com/RealMCCurtis" class="fa fa-twitter m-2" style="color: black" target="_blank"></a> 
+    <a href="https://www.instagram.com/realmccurtis/" class="fa fa-instagram m-2" style="color: black" target="_blank" ></a>
+    <a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=Kjl8WfneTXuE2ej3W0-D0w" class="fa fa-spotify m-2" style="color: black" target="_blank"></a>  
+	</div>
+
+	<img src="img/TOD1.jpg" class="center">
     <p class="darker">
 
     Toronto After Dark was MC Curtis' first introduction to the Toronto music industry. Reaching out through social media MC was able to make this collab album with many OG Toronto artists in order to put them on the map (even though MC Curtis did not actually make an appearance on this album).
