Currently figuring out how to add the apple music fa icon to the list of others using <i> and how to size it properly

--- a/UCU.html
+++ b/UCU.html
@@ -67,11 +67,70 @@
     <h2 class="titlestart mb-0"><Strong>Toronto After Dark</Strong></h2>
 
     <div class="socialLinks text-center">
-    <a href="https://www.facebook.com/RealMCCurtis/" class="fa fa-facebook-square m-2" style="color: black" target="_blank" ></a>
-    <a href="https://twitter.com/RealMCCurtis" class="fa fa-twitter m-2" style="color: black" target="_blank"></a> 
-    <a href="https://www.instagram.com/realmccurtis/" class="fa fa-instagram m-2" style="color: black" target="_blank" ></a>
-    <a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=Kjl8WfneTXuE2ej3W0-D0w" class="fa fa-spotify m-2" style="color: black" target="_blank"></a>  
+    <a href="https://www.facebook.com/RealMCCurtis/" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
+    <a href="https://twitter.com/RealMCCurtis" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
+    <a href="https://www.instagram.com/realmccurtis/" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
+ 
+ <!--
+	  <a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" <span class="fa-apple-music fa-stack">
+  <i class="fa fa-square fa-stack-2x"></i>
+  <i class="fa fa-music fa-stack-1x"></i>
+</span> 
+</a> 
+
+<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" <span class="fa-apple-music fa-stack">
+  <i class="fa fa-circle fa-stack-2x"></i>
+  <i class="fa fa-music fa-stack-1x"></i>
+</span>
+</a> 
+
+<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" <span class="fa-apple-music-o fa-stack">
+  <i class="fa fa-circle-thin fa-stack-2x"></i>
+  <i class="fa fa-music fa-stack-1x"></i>
+</span>
+</a> 
+-->
+
+<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" <span class="fa-apple-music-o fa-stack">
+  <i class="fa fa-square-o fa-stack-1x"></i>
+  <i class="fa fa-music fa-stack-1x"></i>
+</span>
+</a> 
+
+<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" <span class="fa-apple-music fa-stack">
+  <i class="fa fa-apple fa-stack-lg fa-lg"></i>
+  <i class="fa fa-music fa-stack-2x"></i>
+</span>
+</a> 
 	</div>
+
+
+
+
+	<span class="fa-apple-music fa-stack">
+  <i class="fa fa-apple fa-stack-2x"></i>
+  <i class="fa fa-music fa-stack-1x"></i>
+</span>
+
+<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" <span class="fa-apple-music fa-stack">
+  <i class="fa fa-square fa-stack-2x"></i>
+  <i class="fa fa-music fa-stack-1x"></i>
+</span> 
+</a>
+<span class="fa-apple-music-o fa-stack">
+  <i class="fa fa-square-o fa-stack-2x"></i>
+  <i class="fa fa-music fa-stack-1x"></i>
+</span>
+
+<span class="fa-apple-music fa-stack">
+  <i class="fa fa-circle fa-stack-2x"></i>
+  <i class="fa fa-music fa-stack-1x"></i>
+</span>
+
+<span class="fa-apple-music-o fa-stack">
+  <i class="fa fa-circle-thin fa-stack-2x"></i>
+  <i class="fa fa-music fa-stack-1x"></i>
+</span>
 
 	<img src="img/TOD1.jpg" class="center">
     <p class="darker">
