--- a/UCU.html
+++ b/UCU.html
@@ -64,10 +64,10 @@
 		
 	</nav>
     <section class="Page pt-5"> <!--py means padding y axis-->
-    <h2 class="titlestart mb-0"><Strong>Toronto After Dark</Strong></h2>
+    <h2 class="titlestart mb-0 pb-1"><Strong>Toronto After Dark</Strong></h2>
 
-    <div class="socialLinks text-center">
-    <a href="https://www.facebook.com/RealMCCurtis/" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
+    <div class="socialLinks text-center pb-2">
+    <a href="https://open.spotify.com/album/0jiRw28wlBP5SuWPKsw8HK?si=3bf8Yy0yReKGo_QnvaEv5Q" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
     <a href="https://twitter.com/RealMCCurtis" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
     <a href="https://www.instagram.com/realmccurtis/" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
  
@@ -91,46 +91,12 @@
 </a> 
 -->
 
-<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" <span class="fa-apple-music-o fa-stack">
-  <i class="fa fa-square-o fa-stack-1x"></i>
-  <i class="fa fa-music fa-stack-1x"></i>
-</span>
-</a> 
-
-<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" <span class="fa-apple-music fa-stack">
+<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" 
+	<span class="fa-apple-music fa-stack-lg pl-2">
   <i class="fa fa-apple fa-stack-lg fa-lg"></i>
-  <i class="fa fa-music fa-stack-2x"></i>
 </span>
 </a> 
-	</div>
-
-
-
-
-	<span class="fa-apple-music fa-stack">
-  <i class="fa fa-apple fa-stack-2x"></i>
-  <i class="fa fa-music fa-stack-1x"></i>
-</span>
-
-<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" <span class="fa-apple-music fa-stack">
-  <i class="fa fa-square fa-stack-2x"></i>
-  <i class="fa fa-music fa-stack-1x"></i>
-</span> 
-</a>
-<span class="fa-apple-music-o fa-stack">
-  <i class="fa fa-square-o fa-stack-2x"></i>
-  <i class="fa fa-music fa-stack-1x"></i>
-</span>
-
-<span class="fa-apple-music fa-stack">
-  <i class="fa fa-circle fa-stack-2x"></i>
-  <i class="fa fa-music fa-stack-1x"></i>
-</span>
-
-<span class="fa-apple-music-o fa-stack">
-  <i class="fa fa-circle-thin fa-stack-2x"></i>
-  <i class="fa fa-music fa-stack-1x"></i>
-</span>
+</div>
 
 	<img src="img/TOD1.jpg" class="center">
     <p class="darker">
