Finished UCU links, adding link icons for music for benjis right now. Next will be MC Curtis main page.

--- a/Benjis.html
+++ b/Benjis.html
@@ -64,7 +64,7 @@
 
 	<!--Home-->
 	<body class="main">
-		<div class="row mt-5">
+		<div class="row mt-3">
 			<div class="col-lg-6 mt-5 py-5 pl-5">
 				<img class="img-fluid" alt="" src="img/Benjis.png">
 			</div>
@@ -87,6 +87,19 @@
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
 							href="https://ampl.ink/wP6Lo">Click Here To Stream!</a></button>
+
+	<div class="socialLinks pt-3">
+    <a href="https://open.spotify.com/album/5BfGABjwwdO1Tv56SNvaAb?si=LHdXDBPYTIGCWuTTJWOHHg" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
+    <a href="https://soundcloud.com/user-957165752-971701275/sets/toronto-after-dark-2" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
+    <a href="https://www.youtube.com/playlist?list=OLAK5uy_ncHJ275ankY3XUIKc251-XFHGJ2KNoUvY" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
+
+	<a href= "https://music.apple.com/gb/album/toronto-after-dark-2/1473350045" style="color: black" target="_blank" 
+		<span class="fa-apple-music fa-stack-lg pl-2">
+  		<i class="fa fa-apple fa-stack-lg fa-lg"></i>
+		</span>
+	</a> 
+
+</div>
 					</div>
 
 				</div>
