--- a/UCU.html
+++ b/UCU.html
@@ -68,34 +68,15 @@
 
     <div class="socialLinks text-center pb-2">
     <a href="https://open.spotify.com/album/0jiRw28wlBP5SuWPKsw8HK?si=3bf8Yy0yReKGo_QnvaEv5Q" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
-    <a href="https://twitter.com/RealMCCurtis" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
-    <a href="https://www.instagram.com/realmccurtis/" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
- 
- <!--
-	  <a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" <span class="fa-apple-music fa-stack">
-  <i class="fa fa-square fa-stack-2x"></i>
-  <i class="fa fa-music fa-stack-1x"></i>
-</span> 
-</a> 
+    <a href="https://soundcloud.com/user-957165752-971701275/sets/toronto-after-dark-1" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
+    <a href="https://www.youtube.com/playlist?list=PLwJArGHzFTq8iR0MrngulT-Lf-21-MLEv" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
 
-<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" <span class="fa-apple-music fa-stack">
-  <i class="fa fa-circle fa-stack-2x"></i>
-  <i class="fa fa-music fa-stack-1x"></i>
-</span>
-</a> 
+	<a href= "https://music.apple.com/gb/album/toronto-after-dark/1453278950" style="color: black" target="_blank" 
+		<span class="fa-apple-music fa-stack-lg pl-2">
+  		<i class="fa fa-apple fa-stack-lg fa-lg"></i>
+		</span>
+	</a> 
 
-<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" <span class="fa-apple-music-o fa-stack">
-  <i class="fa fa-circle-thin fa-stack-2x"></i>
-  <i class="fa fa-music fa-stack-1x"></i>
-</span>
-</a> 
--->
-
-<a href= "https://www.facebook.com/RealMCCurtis/" style="color: black" target="_blank" 
-	<span class="fa-apple-music fa-stack-lg pl-2">
-  <i class="fa fa-apple fa-stack-lg fa-lg"></i>
-</span>
-</a> 
 </div>
 
 	<img src="img/TOD1.jpg" class="center">
@@ -122,8 +103,21 @@
     </div>
 
 
-    <section class="Page py-5"> <!--py means padding y axis-->
-        <h2 class="titlestart"><Strong>Toronto After Dark 2</Strong></h2>
+    <section class="Page py-0"> <!--py means padding y axis-->
+        <h2 class="titlestart mb-0 pb-1 "><Strong>Toronto After Dark 2</Strong></h2>
+		    
+	<div class="socialLinks text-center pb-2">
+    <a href="https://open.spotify.com/album/5BfGABjwwdO1Tv56SNvaAb?si=LHdXDBPYTIGCWuTTJWOHHg" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
+    <a href="https://soundcloud.com/user-957165752-971701275/sets/toronto-after-dark-2" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
+    <a href="https://www.youtube.com/playlist?list=OLAK5uy_ncHJ275ankY3XUIKc251-XFHGJ2KNoUvY" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
+
+	<a href= "https://music.apple.com/gb/album/toronto-after-dark-2/1473350045" style="color: black" target="_blank" 
+		<span class="fa-apple-music fa-stack-lg pl-2">
+  		<i class="fa fa-apple fa-stack-lg fa-lg"></i>
+		</span>
+	</a> 
+
+</div>
         <img src="img/TAD2.jpg" class="center">
     <p class="darker">
 
