--- a/Benjis.html
+++ b/Benjis.html
@@ -64,8 +64,8 @@
 
 	<!--Home-->
 	<body class="main">
-		<div class="row mt-3">
-			<div class="col-lg-6 mt-5 py-5 pl-5">
+		<div class="row mt-1">
+			<div class="col-lg-6 mt-5 py-3 pl-5">
 				<img class="img-fluid" alt="" src="img/Benjis.png">
 			</div>
 			<!--my means margin on y-->
@@ -73,7 +73,7 @@
 				<!-- so we have 12 rows to work with-->
 				<div class="row">
 					<div class="home-content offset -lg-1 col-lg-10">
-						<h1 class="pb-3" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
+						<h1 class="pb-2" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
 						<h2 class="pb-3"> Benjis</h2>
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
                             Toronto area with a passion to create. <a href="https://ampl.ink/wP6Lo"><u>"Benjis"</u></a> is MC Curtis' follow up from him successful
@@ -89,11 +89,11 @@
 							href="https://ampl.ink/wP6Lo">Click Here To Stream!</a></button>
 
 	<div class="socialLinks pt-3">
-    <a href="https://open.spotify.com/album/5BfGABjwwdO1Tv56SNvaAb?si=LHdXDBPYTIGCWuTTJWOHHg" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
-    <a href="https://soundcloud.com/user-957165752-971701275/sets/toronto-after-dark-2" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
-    <a href="https://www.youtube.com/playlist?list=OLAK5uy_ncHJ275ankY3XUIKc251-XFHGJ2KNoUvY" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
+    <a href="https://open.spotify.com/track/4AA06S0NugZhi2sKCnWBwQ?si=NyqxpkYAQu2MzW4jUKMiDg" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
+    <a href="https://soundcloud.com/user-593936036/benjis-offical-audio/s-OjkpyVClBxG" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
+    <a href="https://www.youtube.com/watch?v=gRhYKwpOqYs" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
 
-	<a href= "https://music.apple.com/gb/album/toronto-after-dark-2/1473350045" style="color: black" target="_blank" 
+	<a href= "https://music.apple.com/gb/album/benjis/1524835427?i=1524835428&uo=4" style="color: black" target="_blank" 
 		<span class="fa-apple-music fa-stack-lg pl-2">
   		<i class="fa fa-apple fa-stack-lg fa-lg"></i>
 		</span>
