--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
 						<a href="https://www.youtube.com/playlist?list=PLwJArGHzFTq-14i5zZ18nFQdTOu3KMf7H" class="fa fa-youtube-play m-2" style="color: blue" target="_blank"></a>
 						<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=QpeQzztITziq3N0TRfUaMA" class="fa fa-spotify m-2" target="_blank" style="color: blue"></a> 
 						<a href="https://soundcloud.com/user-593936036/sets/the-intro-1" class="fa fa-soundcloud m-2" style="color: blue" target="_blank"></a>
-		
+			<a href= "https://music.apple.com/gb/album/the-intro/1512799363" style="color: black" target="_blank" 
+		<span class="fa-apple-music fa-stack-lg pl-2">
+  		<i class="fa fa-apple fa-stack-lg fa-lg"></i>
+		</span>
+	</a> 
 					</div>
 				</div>
 
