--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 					<div class="home-content offset -lg-1 col-lg-10">
 						<h1 class="pb-3"> MC Curtis</h1><!--pb means padding bottom-->
 						<h2 class="pb-3"> On The Rise</h2>
-						<p class="pb-3"> This is the page for the up and coming rapper <em>MC Curtis</em> who just <br> released 
-						his first major project <strong><a href="theintro.html">The Intro EP</a></strong>.
+						<p class="pb-3"> This is the page for the up and coming rapper <a href="https://linktr.ee/mccurtis" target="_blank"><u>MC Curtis</u></a> based out of Toronto Canada
 
 						</p>
 
@@ -93,7 +92,7 @@
 						<a href="https://www.youtube.com/playlist?list=PLwJArGHzFTq-14i5zZ18nFQdTOu3KMf7H" class="fa fa-youtube-play m-2" style="color: blue" target="_blank"></a>
 						<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=QpeQzztITziq3N0TRfUaMA" class="fa fa-spotify m-2" target="_blank" style="color: blue"></a> 
 						<a href="https://soundcloud.com/user-593936036/sets/the-intro-1" class="fa fa-soundcloud m-2" style="color: blue" target="_blank"></a>
-			<a href= "https://music.apple.com/gb/album/the-intro/1512799363" style="color: black" target="_blank" 
+			<a href= "https://music.apple.com/gb/album/the-intro/1512799363" style="color: blue" target="_blank" 
 		<span class="fa-apple-music fa-stack-lg pl-2">
   		<i class="fa fa-apple fa-stack-lg fa-lg"></i>
 		</span>
